Fixed title wrap on home page

--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -1,6 +1,7 @@
 .title {
     margin: 0;
     margin-bottom: 10px;
+    word-break: break-word;
 }
 .blog{
     display: flex;
